# CMIP7-Data-Request-Branded-Variables

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  add-branded-variables-to-csv.py  pyproject.toml
processed-csvs/: v1_2-Variables-Spreadsheet-KT-review-041525_plus-branded-variables.csv
raw-spreadsheets/: v1_2-Variables-Spreadsheet-KT-review-041525.xlsx
